--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,16 +7,27 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
+  bloc: ^9.1.0
+  build_runner: ^2.4.15
+  cupertino_icons: ^1.0.8
+
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  freezed: ^2.5.8
+  freezed_annotation: ^2.4.4
+  go_router: ^17.1.0
+  json_annotation: ^4.9.0
+  very_good_analysis: ^10.0.0
 
 dev_dependencies:
+  flutter_lints: ^5.0.0
+
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  json_serializable: ^6.9.4
 
 
 flutter:
