--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   build_runner: ^2.4.15
   cupertino_icons: ^1.0.8
 
+  dartz: ^0.10.1
   flutter:
     sdk: flutter
 
@@ -18,7 +19,11 @@ dependencies:
   freezed: ^2.5.8
   freezed_annotation: ^2.4.4
   go_router: ^17.1.0
+  http: ^1.6.0
+  hydrated_bloc: ^10.1.1
   json_annotation: ^4.9.0
+  path_provider: ^2.1.5
+  pretty_http_logger: ^1.0.5
   very_good_analysis: ^10.0.0
 
 dev_dependencies:
